--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </ul>
         </div>
 
-        <h2 id="ingredients-title">Ingredients</h2>
+        <h2 class="title">Ingredients</h2>
         <ul>
           <li>2-3 large eggs</li>
           <li>Salt, to taste</li>
@@ -44,7 +44,7 @@
             Optional fillings: cheese, diced vegetables, cooked meats, herbs
           </li>
         </ul>
-        <h2 id="instructions-title">Instructions</h2>
+        <h2 class="title">Instructions</h2>
         <ol>
           <li>
             <span class="bold-text">Beat the eggs:</span> In a bowl, beat the
@@ -81,8 +81,32 @@
           </li>
         </ol>
 
-        Nutrition The table below shows nutritional values per serving without
-        the additional fillings. Calories 277kcal Carbs 0g Protein 20g Fat 22g
+        <div class="nutrition-section">
+          <h2 class="title">Nutrition</h2>
+          <p>
+            The table below shows nutritional values per serving without the
+            additional fillings.
+          </p>
+
+          <table>
+            <tr>
+              <td>Calories</td>
+              <td>277kcal</td>
+            </tr>
+            <tr>
+              <td>Carbs</td>
+              <td>0g</td>
+            </tr>
+            <tr>
+              <td>Protein</td>
+              <td>20g</td>
+            </tr>
+            <tr>
+              <td>Fat</td>
+              <td>22g</td>
+            </tr>
+          </table>
+        </div>
       </div>
     </div>
 
