--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </p>
         <div class="preparation-time-card">
           <h3 id="preperation-time-title">Preparation time</h3>
-          <ul>
+          <ul class="preparation-time-list">
             <li>
               <span class="bold-text">Total:</span> Approximately 10 minutes
             </li>
