--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
 
         <h2 class="title">Ingredients</h2>
-        <ul>
+        <ul class="list">
           <li>2-3 large eggs</li>
           <li>Salt, to taste</li>
           <li>Pepper, to taste</li>
@@ -44,43 +44,44 @@
             Optional fillings: cheese, diced vegetables, cooked meats, herbs
           </li>
         </ul>
+        <hr/>
         <h2 class="title">Instructions</h2>
-        <ol>
+        <ol class="list">
           <li>
-            <span class="bold-text">Beat the eggs:</span> In a bowl, beat the
+            <span class="bold-text">Beat the eggs: </span>In a bowl, beat the
             eggs with a pinch of salt and pepper until they are well mixed. You
             can add a tablespoon of water or milk for a fluffier texture.
           </li>
 
           <li>
-            <span class="bold-text">Heat the pan:</span> Place a non-stick
+            <span class="bold-text">Heat the pan: </span>Place a non-stick
             frying pan over medium heat and add butter or oil.
           </li>
 
           <li>
-            <span class="bold-text">Cook the omelette:</span> Once the butter is
+            <span class="bold-text">Cook the omelette: </span>Once the butter is
             melted and bubbling, pour in the eggs. Tilt the pan to ensure the
             eggs evenly coat the surface.
           </li>
 
           <li>
-            <span class="bold-text"> Add fillings(optional):</span>When the eggs
+            <span class="bold-text">Add fillings(optional): </span>When the eggs
             begin to set at the edges but are still slightly runny in the
             middle, sprinkle your chosen fillings over one half of the omelette.
           </li>
 
           <li>
-            <span class="bold-text"> Fold and serve:</span>As the omelette
+            <span class="bold-text">Fold and serve: </span>As the omelette
             continues to cook, carefully lift one edge and fold it over the
             fillings. Let it cook for another minute, then slide it onto a
             plate.
           </li>
           <li>
-            <span class="bold-text"> Enjoy</span>Serve hot, with additional salt
+            <span class="bold-text">Enjoy: </span>Serve hot, with additional salt
             and pepper if needed.
           </li>
         </ol>
-
+        <hr/>
         <div class="nutrition-section">
           <h2 class="title">Nutrition</h2>
           <p>
