--- a/index.html
+++ b/index.html
@@ -90,21 +90,21 @@
           </p>
 
           <table>
-            <tr>
+            <tr>  
               <td>Calories</td>
-              <td>277kcal</td>
-            </tr>
+              <td class="colored-fact">277kcal</td>
+            </tr> 
             <tr>
               <td>Carbs</td>
-              <td>0g</td>
+              <td class="colored-fact">0g</td>
             </tr>
             <tr>
               <td>Protein</td>
-              <td>20g</td>
+              <td class="colored-fact">20g</td>
             </tr>
             <tr>
               <td>Fat</td>
-              <td>22g</td>
+              <td class="colored-fact">22g</td>
             </tr>
           </table>
         </div>
